First commited as before_48477_rev1